--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,6 @@
         "drupal/drupal_cms_search": "^2",
         "drupal/drupal_cms_seo_basic": "^2",
         "drupal/easy_email_express": "^1.0.2",
-        "drupal/curtistinkers_theme": "^1"
+        "drupal/curtistinkers_theme": "dev-main"
     }
 }
