--- a/recipe.yml
+++ b/recipe.yml
@@ -6,12 +6,12 @@ recipes:
   - core/recipes/core_recommended_maintenance
   - core/recipes/core_recommended_performance
   - drupal_cms_admin_ui
-  - drupal_cms_anti_spam
   - drupal_cms_authentication
-  - drupal_cms_media
-  - drupal_cms_privacy_basic
-  - drupal_cms_seo_basic
-  - easy_email_express
+  # - drupal_cms_anti_spam
+  # - drupal_cms_media
+  # - drupal_cms_privacy_basic
+  # - drupal_cms_seo_basic
+  # - easy_email_express
 install:
   # CVA is a curtistinkers_theme dependency.
   - cva
@@ -21,7 +21,12 @@ install:
   # These are in Standard.
   - inline_form_errors
   - config
+  - canvas
+  # This theme MUST be installed or Canvas breaks in strange ways.
+  - canvas_stark
 config:
+  import:
+      canvas: '*'
   actions:
     system.site:
       simpleConfigUpdate:
@@ -30,55 +35,55 @@ config:
     system.theme:
       simpleConfigUpdate:
         default: curtistinkers_theme
-    project_browser.admin_settings:
-      simpleConfigUpdate:
-        enabled_sources:
-          recommended:
-            # @see recommended.yml
-            uri: 'https://git.drupalcode.org/api/v4/projects/167158/repository/files/recommended.yml/raw?ref=HEAD'
-            ttl: 1
-          drupalorg_jsonapi: []
-        default_source: recommended
+    # project_browser.admin_settings:
+    #   simpleConfigUpdate:
+    #     enabled_sources:
+    #       recommended:
+    #         # @see recommended.yml
+    #         uri: 'https://git.drupalcode.org/api/v4/projects/167158/repository/files/recommended.yml/raw?ref=HEAD'
+    #         ttl: 1
+    #       drupalorg_jsonapi: []
+    #     default_source: recommended
     # Disable Canvas components that aren't really useful in building pages or
     # content templates.
-    canvas.component.block.announce_block:
-      disable: []
-    canvas.component.block.dashboard_placeholder:
-      disable: []
-    canvas.component.block.dashboard_site_status:
-      disable: []
-    canvas.component.block.local_actions_block:
-      disable: []
-    canvas.component.block.local_tasks_block:
-      disable: []
-    canvas.component.block.navigation_dashboard:
-      disable: []
-    canvas.component.block.navigation_link:
-      disable: []
-    canvas.component.block.navigation_shortcuts:
-      disable: []
-    canvas.component.block.navigation_user:
-      disable: []
-    canvas.component.block.project_browser_block.*:
-      disable: []
-    canvas.component.block.system_menu_block.admin:
-      disable: []
-    canvas.component.block.system_menu_block.navigation-user-links:
-      disable: []
-    canvas.component.block.system_menu_block.tools:
-      disable: []
-    canvas.component.block.system_menu_block.top-tasks:
-      disable: []
-    canvas.component.block.system_messages_block:
-      disable: []
-    canvas.component.block.views_block.publishing_content-block_drafts:
-      disable: []
-    canvas.component.block.views_block.publishing_content-block_scheduled:
-      disable: []
-    canvas.component.block.views_block.recent_pages-block_recent_pages:
-      disable: []
-    canvas.component.sdc.navigation.title:
-      disable: []
+    # canvas.component.block.announce_block:
+    #   disable: []
+    # canvas.component.block.dashboard_placeholder:
+    #   disable: []
+    # canvas.component.block.dashboard_site_status:
+    #   disable: []
+    # canvas.component.block.local_actions_block:
+    #   disable: []
+    # canvas.component.block.local_tasks_block:
+    #   disable: []
+    # canvas.component.block.navigation_dashboard:
+    #   disable: []
+    # canvas.component.block.navigation_link:
+    #   disable: []
+    # canvas.component.block.navigation_shortcuts:
+    #   disable: []
+    # canvas.component.block.navigation_user:
+    #   disable: []
+    # canvas.component.block.project_browser_block.*:
+    #   disable: []
+    # canvas.component.block.system_menu_block.admin:
+    #   disable: []
+    # canvas.component.block.system_menu_block.navigation-user-links:
+    #   disable: []
+    # canvas.component.block.system_menu_block.tools:
+    #   disable: []
+    # canvas.component.block.system_menu_block.top-tasks:
+    #   disable: []
+    # canvas.component.block.system_messages_block:
+    #   disable: []
+    # canvas.component.block.views_block.publishing_content-block_drafts:
+    #   disable: []
+    # canvas.component.block.views_block.publishing_content-block_scheduled:
+    #   disable: []
+    # canvas.component.block.views_block.recent_pages-block_recent_pages:
+    #   disable: []
+    # canvas.component.sdc.navigation.title:
+    #   disable: []
 extra:
   recipe_installer_kit:
     finish_url: '/admin/dashboard/welcome'
