Added cms_media and redis

--- a/recipe.yml
+++ b/recipe.yml
@@ -3,14 +3,14 @@ type: Site
 description: A simple template with just the basics. Bring your own design, and build what you need.
 recipes:
   # Required for canvas
-  - core/recipes/image_media_type
+  # - core/recipes/image_media_type
   # - core/recipes/administrator_role
   # - core/recipes/core_recommended_maintenance
   # - core/recipes/core_recommended_performance
   - drupal_cms_admin_ui
   #- drupal_cms_authentication
   # - drupal_cms_anti_spam
-  # - drupal_cms_media
+  - drupal_cms_media
   # - drupal_cms_privacy_basic
   # - drupal_cms_seo_basic
   # - easy_email_express
@@ -19,6 +19,7 @@ install:
   # CVA is a curtistinkers_theme dependency.
   - cva
   - menu_link_content
+  - redis
   # - project_browser
   # These are in Standard.
   # - inline_form_errors
