--- a/config/canvas.page_region.curtistinkers_theme.footer.yml
+++ b/config/canvas.page_region.curtistinkers_theme.footer.yml
@@ -21,3 +21,9 @@ component_tree:
     uuid: c792f1a5-fd27-40de-8d91-12b2ced91e61
     component_id: block.system_menu_block.footer
     inputs: '{"label":"Footer","label_display":"0","level":1,"depth":null,"expand_all_items":false}'
+  '0:footer_utility_last:0':
+    parent_uuid: bd25d2aa-d623-479e-86c7-89ecffdd3dfa
+    slot: footer_utility_last
+    uuid: a8cf48ec-42fe-4c11-ae6a-365a9af5ceb3
+    component_id: sdc.curtistinkers_theme.text
+    inputs: '{"text":{"value":"\u003Cp\u003E\u00a92025 Curtis Tinkers\u003C\/p\u003E","format":"canvas_html_block"},"text_size":"normal","text_color":"default"}'
