--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,8 @@
     "type": "drupal-recipe",
     "license": ["GPL-2.0-or-later"],
     "require": {
+        "drupal/curtistinkers_theme": "dev-main",
+
         "drupal/drupal_cms_admin_ui": "^2",
         "drupal/drupal_cms_anti_spam": "^2",
         "drupal/drupal_cms_authentication": "^2",
@@ -14,6 +16,8 @@
         "drupal/drupal_cms_search": "^2",
         "drupal/drupal_cms_seo_basic": "^2",
         "drupal/easy_email_express": "^1.0.2",
-        "drupal/curtistinkers_theme": "dev-main"
+
+        "drupal/ui_icons": "^1.1",
+        "drupal/views_rss":"^2.4"
     }
 }
