--- a/content/menu_link_content/social-10-x.yml
+++ b/content/menu_link_content/social-10-x.yml
@@ -1,7 +1,7 @@
 _meta:
   version: '1.0'
   entity_type: menu_link_content
-  uuid: 294bda98-240b-4dac-a555-ae7343994d55
+  uuid: d78e370d-402d-4e10-b1d0-1b95d9a90573
   bundle: menu_link_content
   default_langcode: en
 default:
@@ -10,22 +10,22 @@ default:
       value: true
   title:
     -
-      value: Bluesky
+      value: 'X (formerly Twitter)'
   menu_name:
     -
       value: social
   link:
     -
-      uri: 'https://bsky.app/profile/curtistinkers.com'
+      uri: 'https://x.com/curtistinkers'
       title: ''
       options:
         icon:
-          target_id: 'phosphor:butterfly'
+          target_id: 'phosphor:x-logo'
           settings:
             phosphor:
               size: '32'
               color: '#000000'
-              alt: 'Follow us on Bluesky'
+              alt: 'Follow us on X (formerly Twitter)'
         icon_display: icon_only
   external:
     -
@@ -35,7 +35,7 @@ default:
       value: false
   weight:
     -
-      value: 0
+      value: 10
   expanded:
     -
       value: false
