--- a/content/node/sponsor.yml
+++ b/content/node/sponsor.yml
@@ -26,6 +26,9 @@ default:
   revision_translation_affected:
     -
       value: true
+  moderation_state:
+    -
+      value: published
   path:
     -
       alias: /sponsor
