--- a/config/canvas.component.block.system_menu_block.social.yml
+++ b/config/canvas.component.block.system_menu_block.social.yml
@@ -1,10 +1,11 @@
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - system.menu.social
   module:
     - system
+active_version: 838d76f066aff791
 versioned_properties:
   active:
     settings:
