--- a/recipe.yml
+++ b/recipe.yml
@@ -47,15 +47,15 @@ config:
     node.settings:
       simpleConfigUpdate:
         use_admin_theme: true
-    # project_browser.admin_settings:
-    #   simpleConfigUpdate:
-    #     enabled_sources:
-    #       recommended:
-    #         # @see recommended.yml
-    #         uri: 'https://git.drupalcode.org/api/v4/projects/167158/repository/files/recommended.yml/raw?ref=HEAD'
-    #         ttl: 1
-    #       drupalorg_jsonapi: []
-    #     default_source: recommended
+    project_browser.admin_settings:
+      simpleConfigUpdate:
+        enabled_sources:
+          recommended:
+            # @see recommended.yml
+            uri: 'https://git.drupalcode.org/api/v4/projects/167158/repository/files/recommended.yml/raw?ref=HEAD'
+            ttl: 1
+          drupalorg_jsonapi: []
+        default_source: recommended
     # Disable Canvas components that aren't really useful in building pages or
     # content templates.
     # canvas.component.block.announce_block:
@@ -76,8 +76,8 @@ config:
     #   disable: []
     # canvas.component.block.navigation_user:
     #   disable: []
-    # canvas.component.block.project_browser_block.*:
-    #   disable: []
+    canvas.component.block.project_browser_block.*:
+      disable: []
     # canvas.component.block.system_menu_block.admin:
     #   disable: []
     # canvas.component.block.system_menu_block.navigation-user-links:
@@ -88,14 +88,16 @@ config:
     #   disable: []
     # canvas.component.block.system_messages_block:
     #   disable: []
-    # canvas.component.block.views_block.publishing_content-block_drafts:
-    #   disable: []
-    # canvas.component.block.views_block.publishing_content-block_scheduled:
-    #   disable: []
-    # canvas.component.block.views_block.recent_pages-block_recent_pages:
-    #   disable: []
-    # canvas.component.sdc.navigation.title:
-    #   disable: []
+    canvas.component.block.views_block.publishing_content-block_drafts:
+      disable: []
+    canvas.component.block.views_block.publishing_content-block_scheduled:
+      disable: []
+    canvas.component.block.views_block.recent_pages-block_recent_pages:
+      disable: []
+    canvas.component.sdc.navigation.title:
+      disable: []
+    canvas.component.block.events_block:
+      disable: []
 extra:
   recipe_installer_kit:
     finish_url: '/admin/dashboard/welcome'
