--- a/recipe.yml
+++ b/recipe.yml
@@ -3,7 +3,7 @@ type: Site
 description: A simple template with just the basics. Bring your own design, and build what you need.
 recipes:
   # Required for canvas
-  - core/recipes/image_media_type
+  # - core/recipes/image_media_type
   - core/recipes/administrator_role
   - core/recipes/core_recommended_maintenance
   - core/recipes/core_recommended_performance
@@ -13,7 +13,9 @@ recipes:
   - drupal_cms_media
   - drupal_cms_privacy_basic
   - drupal_cms_seo_basic
+  - drupal_cms_forms
   - curtistinkers_cms_blog
+  - curtistinkers_cms_project
   # - easy_email_express
 install:
   - curtistinkers_theme
