--- a/recipe.yml
+++ b/recipe.yml
@@ -3,18 +3,17 @@ type: Site
 description: A simple template with just the basics. Bring your own design, and build what you need.
 recipes:
   # Required for canvas
-  # - core/recipes/image_media_type
   - core/recipes/administrator_role
   - core/recipes/core_recommended_maintenance
   - core/recipes/core_recommended_performance
   - drupal_cms_admin_ui
   - drupal_cms_authentication
   - drupal_cms_anti_spam
-  - drupal_cms_media
   - drupal_cms_privacy_basic
   - drupal_cms_seo_basic
   - drupal_cms_forms
   - curtistinkers_cms_blog
+  - curtistinkers_cms_media
   - curtistinkers_cms_project
   # - easy_email_express
 install:
