--- a/content/node/sponsor.yml
+++ b/content/node/sponsor.yml
@@ -31,6 +31,7 @@ default:
       value: published
   path:
     -
+      pathauto: false
       alias: /sponsor
       langcode: en
   field_description:
