--- a/config/canvas.page_region.curtistinkers_theme.footer.yml
+++ b/config/canvas.page_region.curtistinkers_theme.footer.yml
@@ -17,8 +17,8 @@ dependencies:
   theme:
     - curtistinkers_theme
 id: curtistinkers_theme.footer
-theme: curtistinkers_theme
 region: footer
+theme: curtistinkers_theme
 component_tree:
   0:
     uuid: bd25d2aa-d623-479e-86c7-89ecffdd3dfa
@@ -30,40 +30,47 @@ component_tree:
     slot: footer_first
     uuid: 0013a76b-61bc-4a61-95c2-9b8e3ee45aef
     component_id: block.system_branding_block
-    inputs: '{"use_site_logo":false,"use_site_name":true,"use_site_slogan":false,"label":"Site branding","label_display":"0"}'
+    component_version: b168140fdcaebae5
+    inputs: '{"label":"Site branding","label_display":"0","use_site_logo":false,"use_site_name":true,"use_site_slogan":true}'
   '0:footer_first:1':
     parent_uuid: bd25d2aa-d623-479e-86c7-89ecffdd3dfa
     slot: footer_first
     uuid: b4189610-eaec-4da5-8e0a-e298a205d7dc
     component_id: block.system_menu_block.secondary
+    component_version: 2f5ebe22feed1255
     inputs: '{"label":"Secondary navigation","label_display":"0","level":1,"depth":null,"expand_all_items":false}'
   '0:footer_last:0':
     parent_uuid: bd25d2aa-d623-479e-86c7-89ecffdd3dfa
     slot: footer_last
     uuid: 361b16b8-33aa-44a2-b8fc-386fc71d827d
     component_id: sdc.curtistinkers_theme.group
+    component_version: 5b8517841c0015ea
     inputs: '{"flex_direction":"column","items_align":"center","flex_align":"center","flex_gap":"md"}'
   '0:footer_last:0:group_slot:0':
     parent_uuid: 361b16b8-33aa-44a2-b8fc-386fc71d827d
     slot: group_slot
     uuid: 4593259d-2cdc-4169-ab35-03f9dd1a8a66
     component_id: sdc.curtistinkers_theme.heading
+    component_version: 2d5eef0906da80c2
     inputs: '{"heading_text":"Follow me","level":2,"text_size":"default","text_color":"primary","align":"center"}'
   '0:footer_last:0:group_slot:1':
     parent_uuid: 361b16b8-33aa-44a2-b8fc-386fc71d827d
     slot: group_slot
     uuid: 74d36e0e-de27-4a0d-8f58-44ef0e9726a2
     component_id: block.system_menu_block.social
+    component_version: 838d76f066aff791
     inputs: '{"label":"Social links","label_display":"0","level":1,"depth":null,"expand_all_items":false}'
   '0:footer_utility_first:0':
     parent_uuid: bd25d2aa-d623-479e-86c7-89ecffdd3dfa
     slot: footer_utility_first
     uuid: c792f1a5-fd27-40de-8d91-12b2ced91e61
     component_id: block.system_menu_block.footer
+    component_version: 68bdb40e1ac48125
     inputs: '{"label":"Footer","label_display":"0","level":1,"depth":null,"expand_all_items":false}'
   '0:footer_utility_last:0':
     parent_uuid: bd25d2aa-d623-479e-86c7-89ecffdd3dfa
     slot: footer_utility_last
     uuid: a8cf48ec-42fe-4c11-ae6a-365a9af5ceb3
     component_id: sdc.curtistinkers_theme.text
+    component_version: 3bb3bf1d7e5bdbc1
     inputs: '{"text":{"value":"\u003Cp\u003E\u00a92025 Curtis Tinkers\u003C\/p\u003E","format":"canvas_html_block"},"text_size":"normal","text_color":"default"}'
